Added all dwitter demos, also started adding tag json files per directory

--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
         <main>
             <ol><li><a href="demos/2d raycast light">2d raycast light</a></li>
 <li><a href="demos/3d doodle">3d doodle</a></li>
+<li><a href="demos/3d rotating cylinder">3d rotating cylinder</a></li>
 <li><a href="demos/a star algorithm">a star algorithm</a></li>
 <li><a href="demos/angular rotation">angular rotation</a></li>
 <li><a href="demos/bgscroll">bgscroll</a></li>
+<li><a href="demos/c64 print chr dwitter">c64 print chr dwitter</a></li>
 <li><a href="demos/c64demo">c64demo</a></li>
 <li><a href="demos/canvas antialias">canvas antialias</a></li>
 <li><a href="demos/canvas bokeh">canvas bokeh</a></li>
 <li><a href="demos/canvas lightning">canvas lightning</a></li>
+<li><a href="demos/canvas zom">canvas zom</a></li>
 <li><a href="demos/canvasshooter">canvasshooter</a></li>
 <li><a href="demos/canvasterrain">canvasterrain</a></li>
-<li><a href="demos/canvas zom">canvas zom</a></li>
 <li><a href="demos/cell">cell</a></li>
 <li><a href="demos/change canvas color">change canvas color</a></li>
 <li><a href="demos/closest element">closest element</a></li>
 <li><a href="demos/css rotary number dial">css rotary number dial</a></li>
 <li><a href="demos/detect color">detect color</a></li>
+<li><a href="demos/dna strand dwitter">dna strand dwitter</a></li>
 <li><a href="demos/draw fans">draw fans</a></li>
 <li><a href="demos/draw straight lines">draw straight lines</a></li>
 <li><a href="demos/drawing circles">drawing circles</a></li>
@@ -38,6 +41,7 @@
 <li><a href="demos/js1k terrain">js1k terrain</a></li>
 <li><a href="demos/jsgrapple">jsgrapple</a></li>
 <li><a href="demos/jslander">jslander</a></li>
+<li><a href="demos/lava texture scroller">lava texture scroller</a></li>
 <li><a href="demos/light displacement">light displacement</a></li>
 <li><a href="demos/line drawing">line drawing</a></li>
 <li><a href="demos/mass particles">mass particles</a></li>
@@ -47,19 +51,29 @@
 <li><a href="demos/move target constant rate">move target constant rate</a></li>
 <li><a href="demos/nbody orbit with my game framework">nbody orbit with my game framework</a></li>
 <li><a href="demos/nbody orbit with zoom">nbody orbit with zoom</a></li>
+<li><a href="demos/paint dripping dwitter">paint dripping dwitter</a></li>
 <li><a href="demos/parralax demo 1">parralax demo 1</a></li>
 <li><a href="demos/particle test with my framework">particle test with my framework</a></li>
+<li><a href="demos/pile of poop dwitter">pile of poop dwitter</a></li>
+<li><a href="demos/planet dwitter">planet dwitter</a></li>
 <li><a href="demos/pre generate sprite rotations">pre generate sprite rotations</a></li>
 <li><a href="demos/pre generated sprite rotation game test">pre generated sprite rotation game test</a></li>
+<li><a href="demos/rainbow road">rainbow road</a></li>
 <li><a href="demos/random sunday night">random sunday night</a></li>
 <li><a href="demos/react hackathon 2014">react hackathon 2014</a></li>
 <li><a href="demos/ribbitsmash js13k entry 2015">ribbitsmash js13k entry 2015</a></li>
 <li><a href="demos/rotate ellipse">rotate ellipse</a></li>
 <li><a href="demos/rotate on canvas">rotate on canvas</a></li>
 <li><a href="demos/satellite launching game">satellite launching game</a></li>
+<li><a href="demos/scrolling waves dwitter no cycle">scrolling waves dwitter no cycle</a></li>
+<li><a href="demos/scrolling waves dwitter rainbow cycle">scrolling waves dwitter rainbow cycle</a></li>
 <li><a href="demos/section circle">section circle</a></li>
+<li><a href="demos/shared">shared</a></li>
 <li><a href="demos/sopa ludum date game entry 2012">sopa ludum date game entry 2012</a></li>
+<li><a href="demos/sweeping circles dwitter">sweeping circles dwitter</a></li>
 <li><a href="demos/tetris full screen">tetris full screen</a></li>
+<li><a href="demos/texture scroller">texture scroller</a></li>
+<li><a href="demos/thermal texture scroller">thermal texture scroller</a></li>
 <li><a href="demos/word find">word find</a></li>
 </ol>
         </main>
