--- a/demos/planet dwitter/index.html
+++ b/demos/planet dwitter/index.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
                 eval(unescape(escape`𘑴𙠦𮀮𩡩𫁬𤡥𨱴𚀰𛀰𛁣𛡷𪑤𭁨𯀽𜀬𜡥𜰩𞱸𛡦𪑬𫁓𭁹𫁥👒𚀰𛀹𜀬𜐹𞐩𞱦𫱲𚁁🐵𜀰𛁹🐭𠐻𮐼𠐻𮐫𚰩𩡯𬠨𥠽𘑴𙠦𣑡𭁨𛡳𬑲𭀨𠐪𠐭𮐪𮐩𛁘🐭𥠻𦀼𜀻𦀫𚰩𫠽𣑡𭁨𛡲𨑮𩁯𫐨𚐪𥠯𜐮𝐬𫠾𥠫𦀦𙠡𭀦𙡸𛡦𪑬𫁒𩑣𭀨𦀫𜠪𠐬𮐫𠐬𜐬𜐩𞰻`.replace(/uD./g,'')))
