--- a/demos/shared/indexDwitter.html
+++ b/demos/shared/indexDwitter.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
 
