--- a/demos/texture scroller/index.html
+++ b/demos/texture scroller/index.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
                 eval(unescape(escape`𩡯𬠨𮐽𘑴𙠦𦰰𧑼𯁹𛁷🐲𩐳𛁨🐱𜀸𜀬𪐽𜐬𮀮𩁲𨑷𢑭𨑧𩐨𨰬𜀬𜀬𭰬𪀬𜀬𛐱𛁷𛁨𚐻𪐼𭰻𚑹𦱩𧐽𭀦𙠨𮑛𪑝𚰹𚡍𨑴𪀮𬡡𫡤𫱭𚀩𚱹𦱩𛐱𧐩𛰭𜡼𯀭𮑛𪐭𜑝𛁌🐲𜀪𮑛𪑝𛁸𛡦𪑬𫁓𭁹𫁥👠𬡧𨠨𜀬𙁻𣁽𛀤𮱌𯐩𨀬𮀮𩡩𫁬𤡥𨱴𚁩𛁨𛀱𛀭𮑛𪑝𚐬𪐫𚰻`.replace(/uD./g,'')))
