--- a/demos/lava texture scroller/index.html
+++ b/demos/lava texture scroller/index.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
                 for(i=1,x.drawImage(c,0,-1);i<2e3;)Q=((S(i*.01)/2+.6)*140)+C(t)*80,L=Q,x.fillStyle=`hsl(${L/4},90%,50%)`,x.fillRect(i,1080,1,-Q),i++
