--- a/demos/pile of poop dwitter/index.html
+++ b/demos/pile of poop dwitter/index.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
                 eval(unescape(escape`𘑴𙠦𚁚👙🐵𝀰𚐬𮀮𬱨𨑤𫱷𠱯𫁯𬠽𨁲𩱢𨐨𜠵𛀱𝀬𜀬𛠶𚑠𛁸𛡳𪁡𩁯𭱂𫁵𬠽𝐬𮀮𩡩𫁬𤱴𮑬𩐽𨁲𩱢𚀱𜰹𛀶𞐬𜐴𚑠𛁸𛡢𩑧𪑮𤁡𭁨𚀩𛁸𛡡𬡣𚁚𚰽𠰨𜠪𭀫𜠪𣑡𭁨𛡲𨑮𩁯𫐨𚐩𛁙𚰽𤰨𜠪𭀩𛀵𝀰𛐶𜀪𭀬𜀬𜠪𣑡𭁨𛡐𢐩𛁸𛡦𪑬𫀨𚐻`.replace(/uD./g,'')))
