--- a/demos/scrolling waves dwitter rainbow cycle/index.html
+++ b/demos/scrolling waves dwitter rainbow cycle/index.html
@@ -20,7 +20,7 @@
             const C = Math.cos;
             const S = Math.sign;
             const T = Math.tan;
-            const time = Date.now();
+            let time = Date.now();
 
             function u(t) {
                 eval(unescape(escape`𩡯𬠨𢐽𜡥𜰬𢠽𜐰𞀰𛁸𛡤𬡡𭱉𫑡𩱥𚁣𛀰𛀰𛁉𛁊𛀰𛀭𜐬𢐬𢠩𛁌🐡𭀦𙡛𜁝𯁼𣀬𥰽𭀬𪐽𜀻𪐼𢐻𪐫𚰩𣁛𪑝👴🱌𦱩𧐺𤰨𥰫🐮𜐩𛁸𛡦𪑬𫁓𭁹𫁥👠𪁳𫀨𜐹𜀬𞐰𙐬𙁻𞐰𚡌𦱩𧑽𙐩𨀬𮀮𩡩𫁬𤡥𨱴𚁩𚰱𜀪𤰨𜐰𚡴𚐬𢠬𜐬𛑌𦱩𧐩𞱌𛡰𭑳𪀨𣀮𬱨𪑦𭀨𚐩`.replace(/uD./g,'')))
