--- a/demos/paint dripping dwitter/index.html
+++ b/demos/paint dripping dwitter/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<canvas id="c" width="1920" height="1080"></canvas>
 	    <script>
+            const FPS = 60;
             const c = document.getElementById('c');
             const x = c.getContext('2d');
             const R = function(r,g,b,a) {
@@ -20,15 +21,29 @@
             let C = Math.cos;
             let S = Math.sin;
             let T = Math.tan;
-            let time = Date.now();
+            let frame = 0;
+            let nextFrameMs = 0;
+            let time = 0;
 
             function u(t) {
                 with(x)for(s=2e3,drawImage(c,0,2),i=s;i>0;i-=Math.random()*s)fillStyle=`hsl(${t*i},50%,80%)`,beginPath(),arc(i,0,15,0,6),fill()
             }
 
-            function draw() {
+            function draw(frame_time) {
                 requestAnimationFrame(draw);
-                u(Date.now() - time);
+                epsilon = 1.5; // Acounts for different timestamp resolution and slight jitter
+                if (frame_time < nextFrameMs - epsilon) {
+                    return;  // Skip this cycle as we are animating too quickly.
+                }
+                nextFrameMs = Math.max(nextFrameMs + 1000 / FPS, frame_time);
+
+                time = frame / FPS;
+                if(time * FPS | 0 == frame - 1){
+                    time += 0.000001;
+                }
+
+                frame++;
+                u(time);
             }
 
             draw();
