--- a/demos/pile of poop dwitter/index.html
+++ b/demos/pile of poop dwitter/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<canvas id="c" width="1920" height="1080"></canvas>
 	    <script>
+            const FPS = 60;
             const c = document.getElementById('c');
             const x = c.getContext('2d');
             const R = function(r,g,b,a) {
@@ -20,15 +21,29 @@
             let C = Math.cos;
             let S = Math.sin;
             let T = Math.tan;
-            let time = Date.now();
+            let frame = 0;
+            let nextFrameMs = 0;
+            let time = 0;
 
             function u(t) {
                 eval(unescape(escape`𘑴𙠦𚁚👙🐵𝀰𚐬𮀮𬱨𨑤𫱷𠱯𫁯𬠽𨁲𩱢𨐨𜠵𛀱𝀬𜀬𛠶𚑠𛁸𛡳𪁡𩁯𭱂𫁵𬠽𝐬𮀮𩡩𫁬𤱴𮑬𩐽𨁲𩱢𚀱𜰹𛀶𞐬𜐴𚑠𛁸𛡢𩑧𪑮𤁡𭁨𚀩𛁸𛡡𬡣𚁚𚰽𠰨𜠪𭀫𜠪𣑡𭁨𛡲𨑮𩁯𫐨𚐩𛁙𚰽𤰨𜠪𭀩𛀵𝀰𛐶𜀪𭀬𜀬𜠪𣑡𭁨𛡐𢐩𛁸𛡦𪑬𫀨𚐻`.replace(/uD./g,'')))
             }
 
-            function draw() {
+            function draw(frame_time) {
                 requestAnimationFrame(draw);
-                u(Date.now() - time);
+                epsilon = 1.5; // Acounts for different timestamp resolution and slight jitter
+                if (frame_time < nextFrameMs - epsilon) {
+                    return;  // Skip this cycle as we are animating too quickly.
+                }
+                nextFrameMs = Math.max(nextFrameMs + 1000 / FPS, frame_time);
+
+                time = frame / FPS;
+                if(time * FPS | 0 == frame - 1){
+                    time += 0.000001;
+                }
+
+                frame++;
+                u(time);
             }
 
             draw();
