--- a/demos/scrolling waves dwitter rainbow cycle/index.html
+++ b/demos/scrolling waves dwitter rainbow cycle/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<canvas id="c" width="1920" height="1080"></canvas>
 	    <script>
+            const FPS = 60;
             const c = document.getElementById('c');
             const x = c.getContext('2d');
             const R = function(r,g,b,a) {
@@ -20,15 +21,29 @@
             let C = Math.cos;
             let S = Math.sin;
             let T = Math.tan;
-            let time = Date.now();
+            let frame = 0;
+            let nextFrameMs = 0;
+            let time = 0;
 
             function u(t) {
                 eval(unescape(escape`𩡯𬠨𢐽𜡥𜰬𢠽𜐰𞀰𛁸𛡤𬡡𭱉𫑡𩱥𚁣𛀰𛀰𛁉𛁊𛀰𛀭𜐬𢐬𢠩𛁌🐡𭀦𙡛𜁝𯁼𣀬𥰽𭀬𪐽𜀻𪐼𢐻𪐫𚰩𣁛𪑝👴🱌𦱩𧐺𤰨𥰫🐮𜐩𛁸𛡦𪑬𫁓𭁹𫁥👠𪁳𫀨𜐹𜀬𞐰𙐬𙁻𞐰𚡌𦱩𧑽𙐩𨀬𮀮𩡩𫁬𤡥𨱴𚁩𚰱𜀪𤰨𜐰𚡴𚐬𢠬𜐬𛑌𦱩𧐩𞱌𛡰𭑳𪀨𣀮𬱨𪑦𭀨𚐩`.replace(/uD./g,'')))
             }
 
-            function draw() {
+            function draw(frame_time) {
                 requestAnimationFrame(draw);
-                u(Date.now() - time);
+                epsilon = 1.5; // Acounts for different timestamp resolution and slight jitter
+                if (frame_time < nextFrameMs - epsilon) {
+                    return;  // Skip this cycle as we are animating too quickly.
+                }
+                nextFrameMs = Math.max(nextFrameMs + 1000 / FPS, frame_time);
+
+                time = frame / FPS;
+                if(time * FPS | 0 == frame - 1){
+                    time += 0.000001;
+                }
+
+                frame++;
+                u(time);
             }
 
             draw();
