--- a/demos/pile of poop dwitter/index.html
+++ b/demos/pile of poop dwitter/index.html
@@ -1,52 +1,59 @@
 <!doctype html>
 <html>
 	<head>
-        <style>
-            html,body{
-                padding: 0;
-                margin: 0;
-                overflow: hidden;
-            }
-        </style>
 	</head>
-	<body>
-		<canvas id="c" width="1920" height="1080"></canvas>
-	    <script>
-            const FPS = 60;
-            const c = document.getElementById('c');
-            const x = c.getContext('2d');
-            const R = function(r,g,b,a) {
-                return `rgba(${r},${g},${b},${a})`;
-            };
-            let C = Math.cos;
-            let S = Math.sin;
-            let T = Math.tan;
-            let frame = 0;
-            let nextFrameMs = 0;
-            let time = 0;
+    <body>
+        <body>
+            <main>
+                <section style="margin: 0 auto; max-width: 600px">
+                    <canvas style="width: 100%" id="c" width="1920" height="1080"></canvas>
+                    <code>function u(t) {</code>
+                    <br/>
+                    <textarea style="width: 100%" rows="5">
+                        eval(unescape(escape`𘑴𙠦𚁚👙🐵𝀰𚐬𮀮𬱨𨑤𫱷𠱯𫁯𬠽𨁲𩱢𨐨𜠵𛀱𝀬𜀬𛠶𚑠𛁸𛡳𪁡𩁯𭱂𫁵𬠽𝐬𮀮𩡩𫁬𤱴𮑬𩐽𨁲𩱢𚀱𜰹𛀶𞐬𜐴𚑠𛁸𛡢𩑧𪑮𤁡𭁨𚀩𛁸𛡡𬡣𚁚𚰽𠰨𜠪𭀫𜠪𣑡𭁨𛡲𨑮𩁯𫐨𚐩𛁙𚰽𤰨𜠪𭀩𛀵𝀰𛐶𜀪𭀬𜀬𜠪𣑡𭁨𛡐𢐩𛁸𛡦𪑬𫀨𚐻`.replace(/uD./g,'')))
+                    </textarea>
+                    <br/>
+                    <code>}</code>
+                </section>
+            </main>
+            <script>
+                const FPS = 60;
+                const c = document.getElementById('c');
+                const x = c.getContext('2d');
+                const R = function(r,g,b,a) {
+                    return `rgba(${r},${g},${b},${a})`;
+                };
+                let C = Math.cos;
+                let S = Math.sin;
+                let T = Math.tan;
+                let frame = 0;
+                let nextFrameMs = 0;
+                let time = 0;
 
-            function u(t) {
-                eval(unescape(escape`𘑴𙠦𚁚👙🐵𝀰𚐬𮀮𬱨𨑤𫱷𠱯𫁯𬠽𨁲𩱢𨐨𜠵𛀱𝀬𜀬𛠶𚑠𛁸𛡳𪁡𩁯𭱂𫁵𬠽𝐬𮀮𩡩𫁬𤱴𮑬𩐽𨁲𩱢𚀱𜰹𛀶𞐬𜐴𚑠𛁸𛡢𩑧𪑮𤁡𭁨𚀩𛁸𛡡𬡣𚁚𚰽𠰨𜠪𭀫𜠪𣑡𭁨𛡲𨑮𩁯𫐨𚐩𛁙𚰽𤰨𜠪𭀩𛀵𝀰𛐶𜀪𭀬𜀬𜠪𣑡𭁨𛡐𢐩𛁸𛡦𪑬𫀨𚐻`.replace(/uD./g,'')))
-            }
-
-            function draw(frame_time) {
-                requestAnimationFrame(draw);
-                epsilon = 1.5; // Acounts for different timestamp resolution and slight jitter
-                if (frame_time < nextFrameMs - epsilon) {
-                    return;  // Skip this cycle as we are animating too quickly.
+                function u(t) {
+                    eval(unescape(escape`𘑴𙠦𚁚👙🐵𝀰𚐬𮀮𬱨𨑤𫱷𠱯𫁯𬠽𨁲𩱢𨐨𜠵𛀱𝀬𜀬𛠶𚑠𛁸𛡳𪁡𩁯𭱂𫁵𬠽𝐬𮀮𩡩𫁬𤱴𮑬𩐽𨁲𩱢𚀱𜰹𛀶𞐬𜐴𚑠𛁸𛡢𩑧𪑮𤁡𭁨𚀩𛁸𛡡𬡣𚁚𚰽𠰨𜠪𭀫𜠪𣑡𭁨𛡲𨑮𩁯𫐨𚐩𛁙𚰽𤰨𜠪𭀩𛀵𝀰𛐶𜀪𭀬𜀬𜠪𣑡𭁨𛡐𢐩𛁸𛡦𪑬𫀨𚐻`.replace(/uD./g,'')))
                 }
-                nextFrameMs = Math.max(nextFrameMs + 1000 / FPS, frame_time);
 
-                time = frame / FPS;
-                if(time * FPS | 0 == frame - 1){
-                    time += 0.000001;
+                function draw(frame_time) {
+                    requestAnimationFrame(draw);
+                    epsilon = 1.5; // Acounts for different timestamp resolution and slight jitter
+                    if (frame_time < nextFrameMs - epsilon) {
+                        return;  // Skip this cycle as we are animating too quickly.
+                    }
+                    nextFrameMs = Math.max(nextFrameMs + 1000 / FPS, frame_time);
+
+                    time = frame / FPS;
+                    if(time * FPS | 0 == frame - 1){
+                        time += 0.000001;
+                    }
+
+                    frame++;
+                    u(time);
                 }
 
-                frame++;
-                u(time);
-            }
+                draw();
+            </script>
+        </body>
+    </body>
 
-            draw();
-        </script>
-	</body>
 </html>
