--- a/demos/css moon/markup.html
+++ b/demos/css moon/markup.html
@@ -1,3 +1,1 @@
-<canvas class='hacker-3d-shiz'></canvas>
-<canvas class='bars-and-stuff'></canvas>
-<div class="output-console"></div>
+<div id="moon"></div>
