--- a/demos/nbody sim/markup.html
+++ b/demos/nbody sim/markup.html
@@ -1,3 +1,3 @@
 <p>Mousewheel zooms, click to make planets</p>
 <canvas id="playCanvas"></canvas>
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2610/jest.min.js" defer></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2610/jest.min.js"></script>
