deploy: 37880bb0bfcc6bb5f4f9ad71558551ec04e357c1

--- a/demos/canvas heat mapping/index.html
+++ b/demos/canvas heat mapping/index.html
@@ -6,7 +6,7 @@
 	<body>
 		Hold your mouse button down and move it around to draw.
 <canvas></canvas>
-<script src='/js/datgui.min.js'></script>
+<script src='../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
