--- a/demos/doom screen wipe effect/index.html
+++ b/demos/doom screen wipe effect/index.html
@@ -7,7 +7,7 @@
 		<main>
     <canvas id="canvas"></canvas>
 </main>
-<script src='/js/datgui.min.js'></script>
+<script src='../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
