--- a/demos/circuit board pattern/index.html
+++ b/demos/circuit board pattern/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
-		<script src='/js/datgui.min.js'></script>
+		<script src='../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
