--- a/demos/smoke particles/index.html
+++ b/demos/smoke particles/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
-<script src='/js/datgui.min.js'></script>
+<script src='../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
