deploy: 72cc57c61a10efd873b0e3433613f43c34682839

--- a/demos/c64 code art/index.html
+++ b/demos/c64 code art/index.html
@@ -8,7 +8,7 @@
     <canvas id="canvas"></canvas>
     <img src=./nY670Qj.png"/>
 </div>
-<script src='../js/datgui.min.js'></script>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
