--- a/demos/following snake text/index.html
+++ b/demos/following snake text/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="container"></div>
-<script src='../js/datgui.min.js'></script>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
