--- a/demos/oil painting filter/index.html
+++ b/demos/oil painting filter/index.html
@@ -12,7 +12,7 @@
     <h2>Oil Painting Effect</h2>
      <canvas id="dest-canvas"></canvas>
   </section>
-  <script src='../js/datgui.min.js'></script>
+  <script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
