--- a/demos/zombie sim/index.html
+++ b/demos/zombie sim/index.html
@@ -17,7 +17,7 @@
             </li>
         </ol>
 </main>
-<script src='../js/datgui.min.js'></script>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
