--- a/demos/slime text/index.html
+++ b/demos/slime text/index.html
@@ -8,7 +8,7 @@
     <canvas id="canvas"></canvas><br/>
     <input type="text" maxlength="7"/>
 </div>
-<script src='../js/datgui.min.js'></script>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
