--- a/demos/verlet shapes demo/index.html
+++ b/demos/verlet shapes demo/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<canvas id="verlet"></canvas>
-<script src='../js/datgui.min.js'></script>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
