--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <main>
             <ol><li><a href="demos/2d raycast light">2d raycast light</a></li>
 <li><a href="demos/3d doodle">3d doodle</a></li>
+<li><a href="demos/3d dot grid bounce">3d dot grid bounce</a></li>
 <li><a href="demos/3d rotating cylinder">3d rotating cylinder</a></li>
 <li><a href="demos/3d sketcher">3d sketcher</a></li>
 <li><a href="demos/4th of july fireworks">4th of july fireworks</a></li>
@@ -101,6 +102,7 @@
 <li><a href="demos/planets with points">planets with points</a></li>
 <li><a href="demos/pre generate sprite rotations">pre generate sprite rotations</a></li>
 <li><a href="demos/pre generated sprite rotation game test">pre generated sprite rotation game test</a></li>
+<li><a href="demos/pushing dots">pushing dots</a></li>
 <li><a href="demos/rainbow road">rainbow road</a></li>
 <li><a href="demos/random ripple thing">random ripple thing</a></li>
 <li><a href="demos/random shuffle thing">random shuffle thing</a></li>
@@ -125,6 +127,8 @@
 <li><a href="demos/snow audio experiment">snow audio experiment</a></li>
 <li><a href="demos/sopa ludum date game entry 2012">sopa ludum date game entry 2012</a></li>
 <li><a href="demos/spingen">spingen</a></li>
+<li><a href="demos/spinning arcs">spinning arcs</a></li>
+<li><a href="demos/spongey dots">spongey dots</a></li>
 <li><a href="demos/static-img polymer web component">static-img polymer web component</a></li>
 <li><a href="demos/sweeping circles dwitter">sweeping circles dwitter</a></li>
 <li><a href="demos/swimming snakes">swimming snakes</a></li>
@@ -134,6 +138,7 @@
 <li><a href="demos/texture scroller">texture scroller</a></li>
 <li><a href="demos/thermal texture scroller">thermal texture scroller</a></li>
 <li><a href="demos/toggle trance">toggle trance</a></li>
+<li><a href="demos/trippy grid">trippy grid</a></li>
 <li><a href="demos/tunnel of doom">tunnel of doom</a></li>
 <li><a href="demos/twister effect">twister effect</a></li>
 <li><a href="demos/using cellular automaton to generate caves">using cellular automaton to generate caves</a></li>
@@ -141,6 +146,7 @@
 <li><a href="demos/voronoi standard animated">voronoi standard animated</a></li>
 <li><a href="demos/voronoi texture">voronoi texture</a></li>
 <li><a href="demos/wave sim">wave sim</a></li>
+<li><a href="demos/wavy lines">wavy lines</a></li>
 <li><a href="demos/word find">word find</a></li>
 <li><a href="demos/zombie sim">zombie sim</a></li>
 </ol>
