added videos for demos, modified generation script, modified a few demos to record better

--- a/demos/bouncing dots/index.html
+++ b/demos/bouncing dots/index.html
@@ -7,7 +7,7 @@
                 margin: 0;
                 overflow: hidden;
             }
-            canvas{border:1px solid #000;}
+            canvas{border:1px solid #000; background: #fff;}
         </style>
 	</head>
 	<body>
