--- a/demos/burn away effect/markup.html
+++ b/demos/burn away effect/markup.html
@@ -1,1 +1,5 @@
-<canvas id="canvas"></canvas>
+<div class="img-box">
+    <canvas id="canvas"></canvas>
+    <img src="nY670Qj.png"/>
+</div>
+{{datgui}}
