--- a/demos/project a point in front of an object/index.html
+++ b/demos/project a point in front of an object/index.html
@@ -2,11 +2,7 @@
 <html>
 	<head>
         <style>
-            html,body{
-                padding: 0;
-                margin: 0;
-                overflow: hidden;
-            }
+            ol{list-style:none;}
         </style>
 	</head>
 	<body>
