More videos, gifs and screenshots added

--- a/demos/css rotary number dial/index.html
+++ b/demos/css rotary number dial/index.html
@@ -3,7 +3,7 @@
 	<head>
 	</head>
 	<body>
-		<style type="text/css" media="screen"> 
+		<style type="text/css" media="screen">
 			body{
 				background: #3b3b3b;
 				color: #000;
@@ -12,7 +12,7 @@
 				font-size: 4em;
 				height: 100%;
 			}
-			
+
 			ol{
 				list-style: none;
 				width: 100px;
@@ -20,7 +20,7 @@
 				margin: 0;
 				border-right: 1px solid #000;
 			}
-			
+
 			#rotary{
 				width: 505px;
 				height: 100px;
@@ -28,50 +28,50 @@
 				position: relative;
 				text-align: center;
 				top: 40%;
-				margin: 0 auto;
+				margin: 200px auto;
 				background-image: -webkit-linear-gradient(top, #333, #ccc, #ccc ,#333);
 				background-repeat: no-repeat;
 				-webkit-box-shadow: 0px 0px 10px 2px #000;
 			}
-			
+
 			#rotary ol{
 				float: left;
 			}
-			
+
 			#rotary li{
 				line-height: 100px;
 			}
-			
+
 			@-webkit-keyframes rotate {
 				from {
 					-webkit-transform: translate(0,0px);
-					
+
 				}
 				to {
 					-webkit-transform: translate(0,-1000px);
 				}
 			}
-			
+
 			#dial5{
 				-webkit-animation: rotate 10000s linear infinite;
 			}
-			
+
 			#dial4{
 				-webkit-animation: rotate 1000s linear infinite;
 			}
-			
+
 			#dial3{
 				-webkit-animation: rotate 100s linear infinite;
 			}
-			
+
 			#dial2{
 				-webkit-animation: rotate 10s linear infinite;
 			}
-			
+
 			#dial1{
 				-webkit-animation: rotate 1s linear infinite;
 			}
-			
+
 		</style>
 		<div id="rotary">
 			<ol id="dial5">
