--- a/demos/snake in 30 mins/index.html
+++ b/demos/snake in 30 mins/index.html
@@ -10,7 +10,7 @@
         </style>
 	</head>
 	<body>
-        <canvas></canvas>
+        <canvas id="canvas"></canvas>
 	    <script src="./script.js"></script>
 	</body>
 </html>
