Added react, vite, and related packages in order to build main page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <main>
             {{main}}
         </main>
+        <div id="root"></div>
+        <script type="module" src="/src/index.tsx"></script>
         <footer>
             Demos by loktar00 - Jason Brown
         </footer>
