--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     </head>
     <body>
-        <main>
-            {{main}}
-        </main>
-        <div id="root"></div>
+        <main id="root"></main>
         <script type="module" src="/src/index.tsx"></script>
-        <footer>
-            Demos by loktar00 - Jason Brown
-        </footer>
     </body>
 </html>
