--- a/demos/using cellular automaton to generate caves/index.html
+++ b/demos/using cellular automaton to generate caves/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+<script src='../../js/datgui.min.js'></script>
 	    <script src="./script.js"></script>
 	</body>
 </html>
